fix(codegen): let one direction's unusable overloads not disable the other's check
The skip that guards against reading a direction nothing describes was a
single row-level one serving both directions. A forward-only row never
reads the backward slots, so their being unreadable is not a reason to
skip it -- and skipping took the forward check with it, handing the
author the javac error inside a generated file that this check exists to
replace. Reachable with a raw BridgeFn, forwardOnly, and two backward
overloads that cannot be ordered: the forward misfit went unreported.

The matrix could not have caught it, because no row had an unusable
backward beside a forward worth checking. One does now.

Three rows also asserted "is ambiguous", which the diagnostic says for
either direction -- so the row whose whole identity is that a BACKWARD
was ambiguous could not fail on the direction being named wrong. Swapping
the label left every test green; it now fails three.

Claude-Session: https://claude.ai/code/session_016oLG65WctRQWHMStbX3MFU